syntax = "proto3";

package user_service.v1;
option go_package = "github.com/vantoan19/Petifies/proto/user-service/v1";

import "common/common.proto";

import "validate/validate.proto";
import "google/protobuf/timestamp.proto";

message GetUserRequest {

    string user_id = 1 [(validate.rules).string.uuid = true];

}

message ListUsersByIdsRequest {
    repeated string user_ids = 1;
}

message ListUsersByIdsResponse {
    repeated User users = 1;
}

service UserService {
    rpc CreateUser(CreateUserRequest) returns (User) {}
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc GetUser(GetUserRequest) returns (User) {}
    rpc ListUsersByIds(ListUsersByIdsRequest) returns (ListUsersByIdsResponse) {}
}